--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-patch",
   "description": "Grunt Plugin to patch files.",
-  "version": "0.1.7",
+  "version": "1.0.0",
   "homepage": "https://github.com/nettantra/grunt-patch",
   "author": {
     "name": "NetTantra Technologies",
@@ -28,13 +28,13 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "^0.9.2",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-nodeunit": "^0.3.3",
-    "grunt": "~0.4.5"
+    "grunt-contrib-jshint": "^1",
+    "grunt-contrib-clean": "^1",
+    "grunt-contrib-nodeunit": "^1",
+    "grunt": ">=0.4.5"
   },
   "peerDependencies": {
-    "grunt": "~0.4.5"
+    "grunt": ">=0.4.5"
   },
   "keywords": [
     "gruntplugin"
